2008-11-29  Janus Weil  <janus@gcc.gnu.org> 	    Mikael Morin <mikael@gcc.gnu.org>

PR fortran/38289
	PR fortran/38290
	* decl.c (match_procedure_decl): Handle whitespaces.
	* resolve.c (resolve_specific_s0): Bugfix in check for intrinsic
	interface.


2008-11-29  Janus Weil  <janus@gcc.gnu.org>
	    Tobias Burnus <burnus@gcc.gnu.org>

	PR fortran/38289
	PR fortran/38290
	* gfortran.dg/proc_decl_1.f90: Extended test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142276 138bc75d-0d04-0410-961f-82ee72b054a4